dnl Process this file with autoconf

dnl Initialization
AC_COPYRIGHT([Copyright (c) 2008 Dennis Moellegaard Pedersen <dennis@moellegaard.dk>])
AC_INIT([msync], [trunk], [dennis@moellegaard.dk])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])

AC_DEFINE(PROTOCOL_VERSION, 1, "The internal protocol version used by msync")

# Determine the host and build time
AC_CANONICAL_HOST
AC_LANG(C)

AM_INIT_AUTOMAKE(msync, 0.0)

dnl Checks for programs.
AC_GNU_SOURCE
AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(CCACHE, ccache)
if test "$CCACHE" ; then
	CC="ccache $CC"
fi

dnl Append the host alias to the tools for cross compiling
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([stdlib.h])

dnl Check for typedefs, structures and compiler characteritics
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions
AC_TYPE_SIZE_T

dnl reasonable guesses for where stuff is installed
dnl if we don't do that now, the config.h will use ${prefix}
dnl for DEFAULT_DATABASE_PATH.
if test "x$prefix" = "xNONE"; then
   prefix="/usr/local"
fi 
if test "x$exec_prefix" = "xNONE"; then
   exec_prefix=$prefix
fi

CFLAGS="$CFLAGS -Wall -W -Wcast-align"

dnl Substitute configuration variables
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

AC_MSG_RESULT([

msync-$VERSION is now configured for $canonical_host_type

  Build...............:  $build
  Host................:  $host
  Source..............:  $srcdir
  Installation prefix.:  $prefix
  C compiler..........:  $CC $CFLAGS
  Internal protocol v.:  $PROTOVOL_VERSION

])
